<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ViewProfileActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toTopOf="@+id/tvBioLabel"
            app:layout_constraintTop_toTopOf="@+id/tvBioLabel">

            <TextView
                android:id="@+id/tvName"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="30dp"
                android:text="Name"
                android:textColor="@color/black"
                android:textSize="48sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvGenderAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="5dp"
                android:text="Gender, Age"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvName" />

            <TextView
                android:id="@+id/tvBioLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="15dp"
                android:labelFor="@+id/tvBio"
                android:text="@string/bio_header"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvGenderAge" />

            <TextView
                android:id="@+id/tvBio"
                android:layout_width="238dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="Bio"
                android:textSize="14sp"
                android:lineSpacingExtra="4dp"
                app:layout_constraintStart_toStartOf="@+id/tvBioLabel"
                app:layout_constraintTop_toBottomOf="@+id/tvBioLabel" />

            <TextView
                android:id="@+id/tvInterestsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="15dp"
                android:labelFor="@+id/tvInterests"
                android:text="Interests"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvBio" />

            <TextView
                android:id="@+id/tvInterests"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="Interests"
                android:lineSpacingExtra="4dp"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/tvInterestsLabel"
                app:layout_constraintTop_toBottomOf="@+id/tvInterestsLabel" />

            <TextView
                android:id="@+id/tvFollowersLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="Followers"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tvInterests"
                app:layout_constraintTop_toBottomOf="@+id/tvInterests" />

            <TextView
                android:id="@+id/tvFollowers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="Followers"
                app:layout_constraintStart_toStartOf="@+id/tvFollowersLabel"
                app:layout_constraintTop_toBottomOf="@+id/tvFollowersLabel" />

            <TextView
                android:id="@+id/tvComingUpLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/coming_up_header"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tvFollowers"
                app:layout_constraintTop_toBottomOf="@+id/tvFollowers" />

            <ListView
                android:id="@+id/rvComingUp"
                android:layout_width="354dp"
                android:layout_height="243dp"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toStartOf="@+id/tvComingUpLabel"
                app:layout_constraintTop_toBottomOf="@+id/tvComingUpLabel" />

            <TextView
                android:id="@+id/tvComingUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toStartOf="@+id/tvComingUpLabel"
                app:layout_constraintTop_toBottomOf="@+id/tvComingUpLabel" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/action_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:text="@string/action_edit"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:backgroundTint="@color/magenta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>